Issue #1138 fix: Collection editor UI fixes

--- a/org.ekstep.sunbirdcommonheader-1.4/editor/header.css
+++ b/org.ekstep.sunbirdcommonheader-1.4/editor/header.css
@@ -124,6 +124,7 @@ body {
     position: relative;
     margin: 0;
     bottom: -4px;
+    color: #0071ff;
 }
 .custom-5-wide .close {
     position: relative;
